<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bevan"
            android:letterSpacing="0.1"
            android:text="@string/app_name"
            android:textSize="26sp"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="10dp" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_bathroom"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="#1DFFFFFF"
        android:cropToPadding="false"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_bedroom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/bathroom" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/bathroom"
        android:textColor="@color/secondaryTextColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_bathroom"
        app:layout_constraintStart_toStartOf="@+id/iv_bathroom"
        app:layout_constraintTop_toBottomOf="@+id/iv_bathroom" />

    <ImageView
        android:id="@+id/iv_bedroom"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="#1DFFFFFF"
        android:cropToPadding="false"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bathroom"
        app:layout_constraintEnd_toStartOf="@+id/iv_livingroom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_bathroom"
        app:layout_constraintTop_toTopOf="@+id/iv_bathroom"
        app:srcCompat="@drawable/bed" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/bedroom"
        android:textColor="@color/secondaryTextColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_bedroom"
        app:layout_constraintStart_toStartOf="@+id/iv_bedroom"
        app:layout_constraintTop_toBottomOf="@+id/iv_bedroom" />

    <ImageView
        android:id="@+id/iv_livingroom"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="#1DFFFFFF"
        android:cropToPadding="false"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bedroom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_bedroom"
        app:layout_constraintTop_toTopOf="@+id/iv_bedroom"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/meeting" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/living_room"
        android:textColor="@color/secondaryTextColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_livingroom"
        app:layout_constraintStart_toStartOf="@+id/iv_livingroom"
        app:layout_constraintTop_toBottomOf="@+id/iv_livingroom" />

    <ImageView
        android:id="@+id/iv_kitchen"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:background="#1DFFFFFF"
        android:cropToPadding="false"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_kidsroom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/kitchen" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/kitchen"
        android:textColor="@color/secondaryTextColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_kitchen"
        app:layout_constraintStart_toStartOf="@+id/iv_kitchen"
        app:layout_constraintTop_toBottomOf="@+id/iv_kitchen" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/kids_room"
        android:textColor="@color/secondaryTextColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_kidsroom"
        app:layout_constraintStart_toStartOf="@+id/iv_kidsroom"
        app:layout_constraintTop_toBottomOf="@+id/iv_kidsroom" />

    <ImageView
        android:id="@+id/iv_kidsroom"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="#1DFFFFFF"
        android:cropToPadding="false"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_diningroom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/iv_kitchen"
        app:layout_constraintTop_toTopOf="@+id/iv_kitchen"
        app:srcCompat="@drawable/kidsroom" />

    <ImageView
        android:id="@+id/iv_diningroom"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="#1DFFFFFF"
        android:cropToPadding="false"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_kidsroom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/iv_kidsroom"
        app:layout_constraintTop_toTopOf="@+id/iv_kidsroom"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dinner" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dining_room"
        android:textColor="@color/secondaryTextColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_diningroom"
        app:layout_constraintStart_toStartOf="@+id/iv_diningroom"
        app:layout_constraintTop_toBottomOf="@+id/iv_diningroom" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/iv_kitchen2"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="#1DFFFFFF"
        android:cropToPadding="false"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/idea" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_control"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_kitchen2"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toEndOf="@+id/iv_kitchen2"
        app:layout_constraintTop_toTopOf="@+id/iv_kitchen2" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:checked="true"
        android:thumbTint="@color/primaryColor"
        android:trackTint="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <ImageView
        android:id="@+id/iv_kitchen3"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="#1DFFFFFF"
        android:cropToPadding="false"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_kitchen2"
        app:srcCompat="@drawable/socket" />

    <ImageView
        android:id="@+id/iv_kitchen4"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:background="#1DFFFFFF"
        android:cropToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:srcCompat="@drawable/thermometer" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power_supply"
        app:layout_constraintBottom_toBottomOf="@+id/iv_kitchen3"
        app:layout_constraintEnd_toStartOf="@+id/switch2"
        app:layout_constraintStart_toEndOf="@+id/iv_kitchen3"
        app:layout_constraintTop_toTopOf="@+id/iv_kitchen3"
        app:layout_constraintHorizontal_bias="0.35"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_kitchen4"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/iv_kitchen4"
        app:layout_constraintTop_toTopOf="@+id/iv_kitchen4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:maxLength="5"
        android:text="@string/temp"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:thumbTint="@color/primaryColor"
        android:trackTint="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_kitchen3" />

</androidx.constraintlayout.widget.ConstraintLayout>